# ATS_Resume_Agent

./: .bandit.yml  .dockerignore  .env.example  .example.env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CLEANUP_PLAN.md  DEPLOYMENT_READY.md  Dockerfile  FRONTEND_INTEGRATION_PROMPT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md  README_v2.md  READY_TO_DEPLOY.md  RENDER_DEPLOYMENT.md  SECURITY_ANALYSIS.md  SECURITY_TESTING_GUIDE.md  TEST_ERROR_LOG.md  TEST_RESULTS_SUMMARY.md  agents_to_do.md  avery_kim_test.docx  john_walker_test.docx  jordan_carpenter_test.docx  production_readiness_assessment.md  pyproject.toml  render.yaml  requirements.txt  security_attack_tests.py  setup.ps1  setup.sh  taylor_reeves_test.docx  test_output.json
.cursor/plans/: interactive-scraping-fallback-138c79eb.plan.md  job-board-scraper.plan.md  resume-parser-integration-488dbe6a.plan.md
.github/workflows/: ci.yml
Documents/ATS_Resume_Agent/: .env.example  .gitignore  README.md  render.yaml  requirements.txt
Documents/ATS_Resume_Agent/app/: __init__.py  config.py  jd_signals.py  logging_utils.py  prompt_assembler.py  prompt_templates.py  schemas.py  scoring.py  validator.py
Documents/ATS_Resume_Agent/app/clients/: __init__.py  openai_client.py
agents/: __init__.py  fused_processor.py  jd_parser.py  rewriter.py  scorer.py  validator.py
api/: main.py
api/static/: index.html
app/: main.py  metrics.py  normalizer.py  rate_limiter.py  retry_policy.py
audit/: CHANGELOG_PROD_HARDENING.md  FINAL_SUMMARY.md  QUICKSTART.md  inventory.json  removal-candidates.md
audit/reports/: dead_code.txt  security_scan.txt
data/: .gitkeep
docs/: AGENTS.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  FRONTEND_INTEGRATION.md  RESUME_PARSING.md  SECURITY.md  TESTING.md
docs/archive/: README_original.md  README_v2.md  README_v3.md
ops/: __init__.py  cost_controller.py  customer_manager.py  dlq.py  env.py  hashing.py  input_builder.py  input_sanitizer.py  job_board_scraper.py  llm_client.py  logging.py  metrics_extractor.py  parsing_errors.py  rate_limiter.py  redis_cache.py  resume_parser.py  retry.py  security_monitor.py  simple_rate_limiter.py  ulid_gen.py
orchestrator/: __init__.py  idempotency.py  state_machine.py
schemas/: __init__.py  models.py
scripts/: batch_parse_resumes.py  benchmark_pipeline.py  convert_resumes.py  generate_api_key.py  parse_resume.py  start_server.py
tests/: README.md  __init__.py  sample_input.json  test_imports.py  test_job_board_scraper.py
tests/api/: test_api.ps1  test_api_basic.py  test_api_manual.py  test_bulk_endpoint.py  test_customer_auth.py
tests/fixtures/: alex_mendoza_input.json  avery_kim_test_input.json  john_walker_input.json  jordan_carpenter_test_input.json  sample_input.json  taylor_reeves_test_input.json
tests/integration/: __init__.py  test_full_workflow.py  test_pipeline_optimization.py  test_quick.py
tests/resumes/: alex_mendoza_test.docx  mike_s_test.docx
tests/resumes/txt/: alex_mendoza_test.txt  avery_kim_test.txt  john_walker_test.txt  jordan_carpenter_test.txt  mike_s_test.txt  taylor_reeves_test.txt
tests/security/: __init__.py  run_all_security_tests.py  test_input_validation.py  test_penetration.py
